struct layout tests

--- a/src/rf.tests/rf.tests.csproj
+++ b/src/rf.tests/rf.tests.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>rf.tests</RootNamespace>
 
     <IsPackable>false</IsPackable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
